[package]
name = "rust-up"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
sqlite = "0.31.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1.12.0", features = ["full"] }